# time_series_hse

HW_2/: HW_2_Sterlyagov_Dmitry.ipynb
HW_2/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
HW_2/catboost_info/learn/: events.out.tfevents
HW_2/catboost_info/test/: events.out.tfevents
HW_2/modules/: feature_generation.py  models.py  validation.py
HW_3/: favorita_baseline_and_catboost.ipynb  favorita_eda.ipynb  favorita_report.md  favorita_tft.ipynb  pyproject.toml  requirements (1).txt
