[project]
name = "favorita-time-series"
version = "0.1.0"
description = "Time series forecasting with exogenous features on Favorita dataset"
authors = [{name = "Student"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "statsforecast>=1.5",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "plotly>=5.15",
    "tqdm>=4.65"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
